--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,4 +89,6 @@ dependencies {
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
     kapt "androidx.hilt:hilt-compiler:1.0.0"
 
+   // circle progress bar in glide
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 }
