create check network

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,4 +91,7 @@ dependencies {
 
    // circle progress bar in glide
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
+
+    // CircleIndicator
+    implementation 'me.relex:circleindicator:2.1.6'
 }
