--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,4 +94,10 @@ dependencies {
 
     // CircleIndicator
     implementation 'me.relex:circleindicator:2.1.6'
+
+    // Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation "com.squareup.okhttp3:logging-interceptor:4.5.0"
+
 }
